--- a/charts/civil-camunda/Chart.yaml
+++ b/charts/civil-camunda/Chart.yaml
@@ -13,6 +13,8 @@ dependencies:
   - name: ccd
     version: 8.0.27
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+    tags:
+      - civil-ccd-stack
   - name: xui-webapp
     version: ~1.0.0
     repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
